Move to Java 1.6 for Desktop Client.
Drop desktop-wrapper and use java.awt.Desktop directly.